# yInfo-test

./: CMakeLists.txt  README.md  check_log_file.sh
app/scripts/: yInfo-test-app.xml
src/: main.cpp
